fixed navbar responsive collapse

--- a/app/components/navbar/navbar_new.less
+++ b/app/components/navbar/navbar_new.less
@@ -16,7 +16,6 @@
 
 .outer{
   position: relative;
-  background-color: green;
   max-height: 5em;
   width: 100%;
 
@@ -32,11 +31,12 @@
   text-align: center;
   text-transform: lowercase;
   font-variant: small-caps;
-  font-size: 20px;
+  font-size: 25px;
   padding: 8px;
 
-  visibility: hidden;
-  padding-top: 20px;
+  display: none;
+  padding-top: 25px;
+  padding-bottom: 15px;
   max-width: 200px;
   width: 100%;
   margin-left: 50px;
@@ -107,7 +107,7 @@
     }
 
     .logo{
-      visibility: visible;
+      display: inline;
       -webkit-box-ordinal-group: -1;
       -moz-box-ordinal-group: -1;
       -ms-flex-order: -1;
